# automated-stock-trading-systems

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: suites.yaml
docs/: robustness.md  systems_spec.md
examples/: custom_system.py  real_data.py  robustness.py  run_suite.py
src/asts/: __init__.py  backtest.py  cli.py  indicators.py  metrics.py  plotting.py
src/asts/analysis/: __init__.py  montecarlo.py  sensitivity.py  walkforward.py
src/asts/core/: __init__.py  engine.py  portfolio.py  position_sizing.py  system.py  types.py
src/asts/data/: __init__.py  features.py  synthetic.py  yahoo.py
src/asts/systems/: __init__.py  system1_long_trend_high_momentum.py  system2_short_rsi_thrust.py  system3_long_mr_selloff.py  system4_long_trend_low_volatility.py  system5_long_mr_adx_reversal.py  system6_short_mr_six_day_surge.py  system7_catastrophe_hedge.py
tests/: test_analysis.py  test_engine.py  test_indicators.py  test_plotting.py  test_portfolio.py  test_position_sizing.py
