[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asts"
version = "0.1.0"
description = "Automated Stock Trading Systems — a research-grade backtesting engine implementing the seven non-correlated systems from Laurens Bensdorp's book."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ASTS Contributors" }]
keywords = ["trading", "backtesting", "quant", "mean-reversion", "trend-following"]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
plot = ["matplotlib>=3.6"]

[project.scripts]
asts = "asts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
